--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 					</div>
 
 					<div class="uk-grid images">
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/360.gif"><img src="images/Mothership/360.gif" alt="images/360.gif" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Rappel.gif"><img src="images/Mothership/Rappel.gif" alt="Rappel.gif" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Cupola.gif"><img src="images/Mothership/Cupola.gif" alt="Cupola.gif" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Bodies.gif"><img src="images/Mothership/Bodies.gif" alt="Bodies.gif" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/Mothership/360.webp"><img src="images/Mothership/360.webp" alt="images/360.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/Mothership/Rappel.webp"><img src="images/Mothership/Rappel.webp" alt="Rappel.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/Mothership/Cupola.webp"><img src="images/Mothership/Cupola.webp" alt="Cupola.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/Mothership/Bodies.webp"><img src="images/Mothership/Bodies.webp" alt="Bodies.webp" /></a></div>
 					</div>
 					
 
@@ -224,7 +224,7 @@
 					<a href="images/starmap/starmap.rar"><div class="uk-alert">Download StarMap files (.rar)</div></a>
 					<br/>
 
-					<div class="uk-grid">
+					<div class="uk-grid images">
 						<div class="uk-width-medium-1-3"><a href="images/starmap/SM_Universe.jpg"><img src="images/starmap/SM_Universe.jpg" alt="SM_Universe.jpg" /></a></div>
 						<div class="uk-width-medium-1-3"><a href="images/starmap/SM_Solar.jpg"><img src="images/starmap/SM_Solar.jpg" alt="SM_Solar.jpg" /></a></div>
 						<div class="uk-width-medium-1-3"><a href="images/starmap/SM_ISS.jpg"><img src="images/starmap/SM_ISS.jpg" alt="SM_ISS.jpg" /></a></div>
