--- a/index.html
+++ b/index.html
@@ -172,17 +172,17 @@
 
 					<br/>
 					<div class="uk-grid images">
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Features.jpg"><img src="images/Mothership/Features.jpg" alt="Features.jpg" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Inspirations.jpg"><img src="images/Mothership/Inspirations.jpg" alt="Inspirations.jpg"/></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Gameplay.jpg"><img src="images/Mothership/Gameplay.jpg" alt="Gameplay.jpg" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Character.jpg"><img src="images/Mothership/Character.jpg" alt="Character.jpg" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Features.jpg"><img src="images/mothership/Features.jpg" alt="Features.jpg" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Inspirations.jpg"><img src="images/mothership/Inspirations.jpg" alt="Inspirations.jpg"/></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Gameplay.jpg"><img src="images/mothership/Gameplay.jpg" alt="Gameplay.jpg" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Character.jpg"><img src="images/mothership/Character.jpg" alt="Character.jpg" /></a></div>
 					</div>
 
 					<div class="uk-grid images">
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/360.webp"><img src="images/Mothership/360.webp" alt="images/360.webp" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Rappel.webp"><img src="images/Mothership/Rappel.webp" alt="Rappel.webp" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Cupola.webp"><img src="images/Mothership/Cupola.webp" alt="Cupola.webp" /></a></div>
-						<div class="uk-width-medium-1-2"><a href="images/Mothership/Bodies.webp"><img src="images/Mothership/Bodies.webp" alt="Bodies.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/360.webp"><img src="images/mothership/360.webp" alt="images/360.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Rappel.webp"><img src="images/mothership/Rappel.webp" alt="Rappel.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Cupola.webp"><img src="images/mothership/Cupola.webp" alt="Cupola.webp" /></a></div>
+						<div class="uk-width-medium-1-2"><a href="images/mothership/Bodies.webp"><img src="images/mothership/Bodies.webp" alt="Bodies.webp" /></a></div>
 					</div>
 					
 
