--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 				<div id="navigation" class="uk-width-medium-1-4 mobile">					
-					<h1 class="nav-header">SPACE Game Studio</h1>
+					<h1 class="nav-header">SPACE <br>Game Studio</h1>
 					<a class="nav-header" href="https://twitter.com/search?q=%23madeintoulouse&src=typed_query&f=live">#MadeInToulouse</a>
 					<ul class="uk-nav uk-nav-side">
 						<li><a href="#SPACEGameStudio">SPACE Game Studio</a></li>
