--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 						<div class="tomato"style="margin-bottom: 5px;white-space: pre;">🎮  <a  href="#MOTHERSHIP">MOTHERSHIP</a><br/></div>
 						
-						<div class="tomato"style="margin-bottom: 5px;white-space: pre;">⭐  <a  ref="#STARMAP">STARMAP</a><br/></div>
+						<div class="tomato"style="margin-bottom: 5px;white-space: pre;">⭐  <a  href="#STARMAP">STARMAP</a><br/></div>
 
 						<div class="tomato"style="margin-bottom: 5px;white-space: pre;">🎨  <a  href="#Artworks">Artworks</a><br/></div>
 
