--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 							<h2 id="SPACEGameStudio">SPACE Game Studio</h2>
 
 							<div class="uk-hidden" >
-							SPACE wants to become the first aerospace-focused video game studio #MadeInToulouse in partnership with the local aerospace companies, institutions and associations. Our goal is to create user-friendly and innovative videogame experiences, bringing art and science together. Our first project in progress is 
+							SPACE wants to become the first aerospace-focused video game studio #MadeInToulouse in partnership with the local aerospace companies, institutions and associations. Our goal is to create user-friendly and innovative video game experiences, bringing art and science together. Our first project in progress is 
 							</div>
-							SPACE a pour ambition de devenir le premier studio jeu vidéo #MadeInToulouse dans le domaine de l’aérospatial en partenariat avec les entreprises, institutions et associations locales. Notre but est de créer des expériences vidéoludiques accessibles et innovantes, alliant l’art et la science. Notre premier projet est 
+							SPACE a pour ambition de devenir le premier studio de jeux vidéo #MadeInToulouse dans le domaine de l’aérospatial en partenariat avec les entreprises, institutions et associations locales. Notre but est de créer des expériences vidéoludiques accessibles et innovantes, alliant l’art et la science. Notre premier projet est 
 
 							<a href="#MOTHERSHIP">MOTHERSHIP</a>
 
@@ -255,7 +255,7 @@
 
 
 							<div class="uk-hidden" >
-							, an educational version of game’s space systems for museums and educational institutions.
+							, an educational version of the game’s space systems for museums and educational institutions.
 							</div>
 							, une version éducative des systèmes spatiaux du jeu pour les musées et les organismes éducatifs.
 
