--- a/index_en.html
+++ b/index_en.html
@@ -272,8 +272,7 @@
 
 					        <div class="ShowOnCellphone uk-text-center" >
 					        	<br/>
-					        	<a  class="uk-hidden"href="#" uk-totop uk-scroll>Back to the Index</a>
-					        	<a   href="#" uk-totop uk-scroll>Retour à l'Index</a>
+					        	<a  href="#" uk-totop uk-scroll>Back to the Index</a>
 
 					        </div>
 						</div>
