--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div id="navigation" class="uk-width-medium-1-4 mobile">
 					
 
-					<div class="uk-text-right ShowOnCellphone" style="margin-bottom:-30px; white-space: pre;" >🌐 :  <a  href="index_en.html">EN</a> | FR</div>
+					<div class="uk-text-right ShowOnCellphone" style="margin-bottom:-55px; margin-top:15px; white-space: pre;" >🌐 :  <a  href="index_en.html">EN</a> | FR</div>
 
 
 
