--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
 					</div>
 
 
-					<p><a class="ShowOnCellphone " href="images/artworks/Wallpaper.png" target="_blank"rel="noopener noreferrer" ><img src="images/other_images/Wallpaper_Small.png" alt="images/other_images/Wallpaper_Small.png" /></a></p>
+					<p><a class="ShowOnCellphone " href="images/artworks/Wallpaper.png" target="_blank"rel="noopener noreferrer" ><img src="images/other_images/Wallpaper_Small.png" alt="images/other_images/Wallpaper_Small.png" /></a>
+					</p>
 					
-									          
-					<strong style="white-space: pre;">Contact :  </strong>
+					<div style=" margin-bottom: -20px;margin-top:-7px;" >	          
+						<strong style="white-space: pre; ">Contact :  </strong>
 
 						<a href="mailto:carlos.benedito.botella@gmail.com"target="_blank"rel="noopener noreferrer">Email</a> -
 						<a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer" >Twitter</a> -
 						<a href="https://www.facebook.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">Facebook</a> -
 						<a href="https://www.instagram.com/spacegamestudio" target="_blank"rel="noopener noreferrer">Instagram</a> -
 						<a href="https://www.youtube.com/channel/UCCZpDeO4wsytUHf8_0ecHAA/featured" target="_blank"rel="noopener noreferrer">Youtube</a>
+					</div>
 
 
 						<br/>
