--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 						<hr>
 
-					<h2 >Index</h2>
+					<h2 style=" margin-top: 20px;" >Index</h2>
 					
 
 					<div class="subtitle  nav-header" style="margin-left: 40px;"> 
