--- a/index_en.html
+++ b/index_en.html
@@ -121,7 +121,7 @@
 
 						<hr>
 
-					<h2 >Index</h2>
+					<h2 style=" margin-top: 20px;">Index</h2>
 					
 
 					<div class="subtitle  nav-header" style="margin-left: 40px;"> 
