--- a/index_en.html
+++ b/index_en.html
@@ -113,6 +113,7 @@
 						<strong style="white-space: pre;">Contact :  </strong>
 
 						<a href="mailto:carlos.benedito.botella@gmail.com"target="_blank"rel="noopener noreferrer">Email</a> -
+						<a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer" >Steam</a><br/> -
 						<a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer" >Twitter</a> -
 						<a href="https://www.facebook.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">Facebook</a> -
 						<a href="https://www.instagram.com/spacegamestudio" target="_blank"rel="noopener noreferrer">Instagram</a> -
@@ -233,6 +234,7 @@
 							<h2 >Contact</h2>
 							<p>
 								<a href="mailto:carlos.benedito.botella@gmail.com"target="_blank"rel="noopener noreferrer">Email</a><br/>
+								<a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer" >Steam</a><br/>
 								<a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer" >Twitter</a><br/>
 								<a href="https://www.facebook.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">Facebook</a><br/>
 								<a href="https://www.instagram.com/spacegamestudio" target="_blank"rel="noopener noreferrer">Instagram</a><br/>
@@ -294,6 +296,7 @@
 								<iframe src="https://store.steampowered.com/widget/1818290/" frameborder="0" width="646" height="190"></iframe>
 							</div>
 
+							<br/>
 
 							Adventure :
 							<ul>
@@ -657,6 +660,7 @@
 
 					<p>
 						<a href="mailto:carlos.benedito.botella@gmail.com"target="_blank"rel="noopener noreferrer">Email</a><br/>
+						<a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer" >Steam</a><br/>
 						<a href="https://twitter.com/SpaceGameStudio"target="_blank"rel="noopener noreferrer">Twitter</a><br/>
 						<a href="https://www.facebook.com/SpaceGameStudio"target="_blank"rel="noopener noreferrer">Facebook</a><br/>
 						<a href="https://www.instagram.com/spacegamestudio" target="_blank"rel="noopener noreferrer">Instagram</a><br/>
