--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<strong style="white-space: pre; ">Contact :  </strong>
 
 						<a href="mailto:carlos.benedito.botella@gmail.com"target="_blank"rel="noopener noreferrer">Email</a> -
-						<a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer" >Steam</a><br/> -
+						<a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer" >Steam</a> -
 						<a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer" >Twitter</a> -
 						<a href="https://www.facebook.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">Facebook</a> -
 						<a href="https://www.instagram.com/spacegamestudio" target="_blank"rel="noopener noreferrer">Instagram</a> -
