--- a/index_fr.html
+++ b/index_fr.html
@@ -87,7 +87,7 @@
 				<div id="navigation" class="uk-width-medium-1-4 mobile">
 					
 
-					<div class="uk-text-right ShowOnCellphone" style="margin-bottom:-47px; margin-top:10px; white-space: pre;" >🌐 :  <a  href="index.html">EN</a> | FR</div>
+					<div class="uk-text-right ShowOnCellphone" style="margin-bottom:-47px; margin-top:10px; white-space: pre;" >🌐 :  <a  href="/">EN</a> | FR</div>
 
 
 
