--- a/index.html
+++ b/index.html
@@ -280,13 +280,17 @@
 
 					        <br/>
 
-						  
+
+					        <div class="uk-hidden">						 
 					    	<iframe id="mailinglist"
 					    		width="300"
 					    		height="200"
 					    	src="http://pending.kaaarot.com"
 					    		>
 					    	</iframe>
+					    	</div>
+
+
 
 					        <div class="ShowOnCellphone uk-text-center" >
 					        	<br/>
