--- a/index_fr.html
+++ b/index_fr.html
@@ -287,13 +287,18 @@
 
 					        <br/>
 
-						  
+
+
+							<div class="uk-hidden">						 
 					    	<iframe id="mailinglist"
 					    		width="300"
 					    		height="200"
 					    	src="http://pending.kaaarot.com"
 					    		>
 					    	</iframe>
+					    	</div>
+
+
 
 					        <div class="ShowOnCellphone uk-text-center" >
 					        	<br/>
