--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 							<br/><br/>
 
 						        
-					        This project leader is Carlos Benedito, an aeronautical engineer and independent game designer. He was born in the mediterranean city of Valencia, in Spain. He got his degree in the Polytechnic University of Madrid where he participated in the UPM/Sat-2 microsatellite project (successfully launched in 2020). Afterwards he moved to Toulouse where he has been working in Design Office for several Airbus projects and in collaboration with its flight test pilots. He began his project of creating a video game studio on the spring of 2018 in a self-learning way. The three main activities so far have been prototyping with Unreal Engine 4, gathering a team and involving the local aerospace entities and science communicators.
+					        This project leader is Carlos, an aeronautical engineer and independent game designer. He was born in the mediterranean city of Valencia, in Spain. He got his degree in the Polytechnic University of Madrid where he participated in the UPM/Sat-2 microsatellite project (successfully launched in 2020). Afterwards he moved to Toulouse where he has been working in Design Office for several Airbus projects and in collaboration with its flight test pilots. He began his project of creating a video game studio on the spring of 2018 in a self-learning way. The three main activities so far have been prototyping with Unreal Engine 4, gathering a team and involving the local aerospace entities and science communicators.
 					        
 
 					        <br/>
