--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 					<hr>
 						<h2 id="MOTHERSHIP">MOTHERSHIP</h2>
 							
-							Mothership will be our first videogame. It is a scifi exploration-adventure game with a dreamy atmosphere. You will incarnate a lost child that will take off in an interstellar journey to reunite with the last humans in the galaxy. During your search you will track the Black-Boxes’ signals of huge crashed spaceships (the Motherships) in order to recover its fuel and be able to continue searching deeper into space. This game is about pathfinding in handcrafted awe-inspiring worlds overcoming some hidden environmental dangers and rush moments.
+							Mothership will be my first videogame. It is a scifi exploration-adventure game with a dreamy atmosphere. You will incarnate a lost child that will take off in an interstellar journey to reunite with the last humans in the galaxy. During your search you will track the Black-Boxes’ signals of huge crashed spaceships (the Motherships) in order to recover its fuel and be able to continue searching deeper into space. This game is about pathfinding in handcrafted awe-inspiring worlds overcoming some hidden environmental dangers and rush moments.
 							
 
 								<br/><br/>
