--- a/index.html
+++ b/index.html
@@ -678,10 +678,8 @@
 							
 							<div class="uk-text-center" >
 								<br/>
-							   <div class="uk-width-auto" ><a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer"><img src="images/Logos/s.png" alt="s.png" style="width: auto; height: auto;" /></a></div>
-							   STEAM
-							   <br/>
-							   <a href="https://store.steampowered.com/app/1818290/MOTHERSHIP" target="_blank"rel="noopener noreferrer">https://store.steampowered.com/app/1818290/MOTHERSHIP</a>
+							   <div class="uk-width-auto" ><a href="https://store.steampowered.com/app/1818290/MOTHERSHIP/" target="_blank"rel="noopener noreferrer"><img src="images/Logos/s.png" alt="s.png" style="width: auto; height: auto;" /></a></div>				   
+							   <a href="https://store.steampowered.com/app/1818290/MOTHERSHIP" target="_blank"rel="noopener noreferrer">STEAM</a>
 
 
 
@@ -689,10 +687,8 @@
 							   <br/>
 							   <br/>
 
-							   <div class="uk-width-auto"><a href="https://discord.gg/QuqaUpB7XD" target="_blank"rel="noopener noreferrer"><img src="images/Logos/d.png" alt="d.png" style="width: auto; height: auto;"/></a></div>
-							   DISCORD
-							   <br/>
-							   <a href="https://discord.gg/QuqaUpB7XD" target="_blank"rel="noopener noreferrer">https://discord.gg/QuqaUpB7XD</a>
+							   <div class="uk-width-auto"><a href="https://discord.gg/QuqaUpB7XD" target="_blank"rel="noopener noreferrer"><img src="images/Logos/d.png" alt="d.png" style="width: auto; height: auto;"/></a></div>							   
+							   <a href="https://discord.gg/QuqaUpB7XD" target="_blank"rel="noopener noreferrer">DISCORD</a>
 
 							   <br/>
 							   <br/>
@@ -700,9 +696,7 @@
 
 
 							   <div class="uk-width-auto"><a href="https://www.reddit.com/user/SpaceGameStudio"target="_blank"rel="noopener noreferrer"><img src="images/Logos/r.png" alt="r.png" style="width: auto; height: auto;"/></a></div>
-							   REDDIT
-							   <br/>
-							   <a href="https://www.reddit.com/user/SpaceGameStudio" target="_blank"rel="noopener noreferrer">https://www.reddit.com/user/SpaceGameStudio</a>
+							   <a href="https://www.reddit.com/user/SpaceGameStudio" target="_blank"rel="noopener noreferrer">REDDIT</a>
 
 							   <br/>
 							   <br/>
@@ -710,18 +704,14 @@
 
 
 							   <div class="uk-width-auto"><a href="https://www.youtube.com/@spacegamestudio"target="_blank"rel="noopener noreferrer"><img src="images/Logos/y.png" alt="y.png" style="width: auto; height: auto;"/></a></div>
-							   YOUTUBE
-							   <br/>
-							   <a href="https://www.youtube.com/@spacegamestudio" target="_blank"rel="noopener noreferrer">https://www.youtube.com/@spacegamestudio</a>
+							   <a href="https://www.youtube.com/@spacegamestudio" target="_blank"rel="noopener noreferrer">YOUTUBE</a>
 
 							   <br/>
 							   <br/>
 							   <br/>
 
 							   <div class="uk-width-auto"><a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer"><img src="images/Logos/x.png" alt="x.png" style="width: auto; height: auto;"/></a></div>
-							   X
-							   <br/>
-							   <a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">https://twitter.com/SpaceGameStudio</a>
+							   <a href="https://twitter.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">X</a>
 
 							   <br/>
 							   <br/>
@@ -729,9 +719,7 @@
 
 
 							   <div class="uk-width-auto"><a href="https://www.instagram.com/spacegamestudio"target="_blank"rel="noopener noreferrer"><img src="images/Logos/i.png" alt="i.png" style="width: auto; height: auto;"/></a></div>
-							   INSTAGRAM
-							   <br/>
-							   <a href="https://www.instagram.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">https://www.instagram.com/SpaceGameStudio</a>
+							   <a href="https://www.instagram.com/SpaceGameStudio" target="_blank"rel="noopener noreferrer">INSTAGRAM</a>
 
 							   <br/>
 							   <br/>
